--- a/Tugas CV/style.css
+++ b/Tugas CV/style.css
@@ -12,10 +12,9 @@ body{
 .container {
     margin: auto;
     display: grid;
-    grid-template-columns: 0.35fr 0.65fr;
-    width: 100%;
-    max-width: 210mm;
-    height: auto;
+    grid-template-columns: 0.33fr 1fr;
+    width: 210mm;
+    height: 297mm;
     overflow:hidden;
     box-shadow: 2px 2px 20px rgb(0, 0, 0, 0.7);
 }
@@ -95,24 +94,76 @@ body{
 }
 
 .container .card-two .head-title{
-    font-size: 2.1em;
+    font-size: 1.5em;
     color:rgb(95, 95, 95);
     font-weight: 400;
-    margin: 0;
+    margin-left: -18px;
+    margin-top: 10px;
     padding: 0;
     line-height: 1.2;
 }
 
+.container .card-two .programmer-title{
+    margin-top: -10px;
+    margin-left: -18px;
+    font-size: 0.65em;
+}
+
 .container .card-two .box{
     display: inline-block;
-    padding: 2px 10px;
-    margin-left: 0px;
-    margin-top: 5px;
+    padding: 10px;
+    width: 250px;
+    height: 85px;
+    margin-left: -20px;
+    margin-top: 2px;
     background-color:#757070;
 }
 
 .container .card-two .group-1{
     margin-top: 15px;
     line-height:1.5;
+}
 
+.container .card-two .group-2 .desk{
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.container .card-two .group-2 .desk ul{
+    position: relative;
+    margin-top: 20px;
+    margin-left: 5px;
+}
+
+.container .card-two .group-2 .desk ul::before{
+    content: "";
+    position: absolute;
+    top: 12px;
+    left: -22px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color:rgb(91, 73, 73)
+}
+
+.container .card-two .group-2 .desk ul li{
+    list-style-type: none;
+    position: relative;
+}
+
+.container .card-two .group-2 .desk ul li::before{
+    content: "";
+    position: absolute;
+    top: 12px;
+    left: -18px;
+    height: 60px;
+    border-left: 2px solid;
+}
+
+.container .card-two .group-2 .desk ul:last-of-type li::before{
+    content: none;
+}
+
+.container .card-two .group-2 .desk ul li div:last-of-type{
+    color:rgb(52, 93, 124)
 }
