--- a/Tugas CV/style.css
+++ b/Tugas CV/style.css
@@ -37,7 +37,7 @@ body {
     height: 220px;
     border-radius: 50%;
     border: 4px solid #313131;
-    background-image: url("profil.jpg");
+    background-image: url("prof.jpg");
     background-position: center;
     background-size: cover;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -102,22 +102,22 @@ body {
     color: rgb(95, 95, 95);
     font-weight: 400;
     margin-left: -18px;
-    margin-top: 10px;
+    margin-top: -15px;
     padding: 0;
     line-height: 1.2;
+    margin-bottom: 10px;
 }
 
 .container .card-two .student-title {
-    margin-top: -40px;
+    margin-top: -1px;
     margin-left: -18px;
     font-size: 0.40em;
 }
 
 .container .card-two .box {
     display: inline-block;
-    padding: 8px;
-    width: 200px;
-    height: auto;
+    padding: 15px; /* Increased padding for more space */
+    width: calc(100% - 40px); /* Adjust width to fill available space */
     margin-left: -20px;
     margin-top: 20px;
     background-color: #757070;
@@ -129,6 +129,7 @@ body {
     margin-top: 10px;
     line-height: 1.5;
 }
+
 
 .container .card-two .group-2 .desk {
     margin-top: 10px;
@@ -190,5 +191,24 @@ body {
 }
 
 .container .card-two .skills-box .dot.active {
+    background-color: rgb(87, 83, 91);
+}
+
+.container .card-two .personal-skills-box {
+    margin-top: 5px;
+    padding-left: 10px;
+}
+
+.container .card-two .personal-skills-box .dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #070707;
+    border-radius: 50%;
+    margin-top: -4px;
+    margin-left: 2px;
+}
+
+.container .card-two .personal-skills-box .dot.active {
     background-color: rgb(87, 83, 91);
 }
