--- a/Tugas CV/style.css
+++ b/Tugas CV/style.css
@@ -43,7 +43,7 @@ body {
     height: 220px;
     border-radius: 50%;
     border: 5px solid #313131;
-    background-image: url("prof.jpg");
+    background-image: url("profil.jpg");
     background-position: center;
     background-size: cover;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -63,7 +63,7 @@ body {
 }
 
 .container .card-one .contact-box>*:hover .text {
-    color: #007bff;
+    color: #f906d5;
 }
 
 .container .card-one .languages-box {
@@ -75,7 +75,7 @@ body {
     margin-bottom: 5px;
 }
 
-.container .card-one .languages-box div{
+.container .card-one .languages-box .div{
     display: inline-flex;
 }
 
@@ -137,25 +137,25 @@ body {
     padding: 10px; /* Increased padding for more space */
     width: calc(100% - 40px); /* Adjust width to fill available space */
     margin-left: -20px;
-    margin-top: 10px;
+    margin-top: 10x;
     background-color: #757070;
     border-radius: 8px;
     box-shadow: 0 10px 8px rgba(0, 0, 0, 0.2);
 }
 
 .container .card-two .group-1 {
-    margin-top: 15px;
+    margin-top: 10px;
     line-height: 1.5;
 }
 
 .container .card-two .group-2 .desk {
-    margin-top: 10px;
+    margin-top: -4px;
     margin-left: 10px;
 }
 
 .container .card-two .group-2 .desk ul {
     position: relative;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 5px;
 }
 
@@ -193,7 +193,7 @@ body {
 }
 
 .container .card-two .skills-box {
-    margin-top: 5px;
+    margin-top: 4px;
     padding-left: 10px;
 }
 
@@ -201,7 +201,7 @@ body {
     display: inline-block;
     width: 10px;
     height: 10px;
-    background-color: #070707;
+    background-color: #252222;
     border-radius: 50%;
     margin-left: 2px;
     margin-top: -3px;
