--- a/Tugas CV/style.css
+++ b/Tugas CV/style.css
@@ -43,7 +43,7 @@ body {
     height: 220px;
     border-radius: 50%;
     border: 5px solid #313131;
-    background-image: url("profil.jpg");
+    background-image: url("prof.jpg");
     background-position: center;
     background-size: cover;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
